--- a/index.html
+++ b/index.html
@@ -2,20 +2,54 @@
 <html>
 <head>
   <title>RelayTo Fonts Selector</title>
-  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="font.js"></script>
-  <script src="googlefonts.js"></script>
-</head>
-<body>
-  <div ng-app="font" ng-controller="FontController as fontc">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Angular Material style sheet -->
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="index.css">
 
-    <div id='fonts-wrapper'>
-      <b>Fonts:</b>
-      <span ng-repeat='f in fontc.fonts'>
-        {{f.family }} ||
-      </span>
+</head>
+
+<body>
+  <div id="font-app" ng-app="font" ng-controller="FontController">
+    <p> Click on font to select</p>
+
+    <input type="search" ng-model="fsearch" placeholder="Search fonts..." aria-label="filter fonts"/>
+    <div id="font-card">
+      <md-button class="md-raise" ng-repeat="font in fonts | filter:fsearch as results" style="font-family: {{font.family}}" ng-click="addToFontSelectorDialog(font)">
+        <h3 id="font-sample-text">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPp</h3>
+        <div id='font-name'>{{font.family}}</div>
+      </md-button>
+      <md-button class="md-raise" ng-if="results.length == 0">
+        <strong>No results found...</strong>
+      </md-button>
     </div>
 
   </div>
+
+  <!-- Angular Material requires Angular.js Libraries -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+
+  <!-- Angular Material Library -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+
+  <!-- Webfont -->
+  <script src="http://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+  <script>
+    var fonts = angular.element(document.getElementById('font-app'))
+    console.log(fonts)
+    WebFont.load({
+      google: {
+        families: ['ABeeZee', 'Abel', 'Abril Fatface', 'Aclonica']
+      }
+    });
+  </script>
+
+  <!-- JS -->
+  <script src="googlefonts.js"></script>
+  <script src="font.js"></script>
 </body>
 </html>
