--- a/index.html
+++ b/index.html
@@ -12,21 +12,47 @@
 
 <body>
   <div ng-app="font">
-    <div id="font-controller" ng-controller="FontController">
-      <h1>Click To Select Font</h1>
-      <input type="search" ng-model="fsearch" placeholder="Search fonts..." aria-label="filter fonts"/>
-      <md-button class="md-raise" ng-click="showDialog()">
-        <h2> View my Fonts</h2>
-      </md-button>
-      <div id="font-card">
-        <md-button class="md-raise" ng-repeat="font in fonts | filter:fsearch as results" style="font-family: {{font.family}}" ng-class="{'selected':font.selected}" ng-click="toggle(font)">
-          <h3 id="font-sample-text">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPp</h3>
-          <div id='font-name'>{{font.family}}</div>
-        </md-button>
-        <md-button class="md-raise" ng-if="results.length == 0">
-          <strong>No results found...</strong>
-        </md-button>
-      </div>
+    <div id="font-controller" ng-controller="FontController as fontC" ng-cloak>
+
+      <!-- Header -->
+      <h1 class="md-display-2">RelayTo Fonts Selector</h1>
+      <section layout="row">
+        <md-button ng-click="showDialog()">My Fonts</md-button>
+        <md-button>Instructions</md-button>
+      </section>
+
+      <!-- Search with Auto complete -->
+      <form ng-submit="$event.preventDefault()">
+        <md-autocomplete
+            ng-disabled="fontC.isDisabled"
+            md-no-cache="fontC.noCache"
+            md-selected-item="fontC.selectedItem"
+            md-search-text-change="fontC.searchTextChange(fontC.searchText)"
+            md-search-text="fontC.searchText"
+            md-selected-item-change="fontC.selectedItemChange(item)"
+            md-items="font in fonts | filter: fontC.searchText"
+            md-item-text="font.family"
+            md-min-length="0"
+            placeholder="Click Here to search your favorite fonts">
+          <md-item-template>
+            <span md-highlight-text="fontC.searchText" md-highlight-flags="^i">{{font.family}}</span>
+          </md-item-template>
+        </md-autocomplete>
+      </form>
+
+      <!-- Font Cards -->
+      <md-content class="md-padding" layout-xs="column" layout="row">
+        <md-list>
+          <md-list-item class="md-2-line" ng-repeat="font in fonts | filter: fontC.searchText">
+            <md-checkbox ng-click="toggle(font)"></md-checkbox>
+            <div class="md-list-item-text">
+              <h3 style="font-family: {{font.family}}">AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPp</h3>
+              <h3>{{font.family}}</h3>
+              <p>{{font.subsets}}</p>
+            </div>
+          </md-list-item>
+        </md-list>
+      </md-content>
 
     </div>
   </div>
